--- a/promptflow/web-classification/run_evaluation.yml
+++ b/promptflow/web-classification/run_evaluation.yml
@@ -1,18 +1,18 @@
 $schema: https://azuremlschemas.azureedge.net/promptflow/latest/Run.schema.json
 flow: ../evaluation/classification-accuracy-eval
 data: data.jsonl
-run: web_classification_variant_1_20230816_215600_605116 # replace with your run name
+run: web_classification_variant_1_20230916_215600_605116 # replace with your run name
 column_mapping:
   groundtruth: ${data.answer}
   prediction: ${run.outputs.category}
 
 # define cloud resource
-runtime: <runtime-name>
+runtime: vm1
 
 connections:
   classify_with_llm:
-    connection: Default_AzureOpenAI
-    deployment_name: gpt-35-turbo-0301
+    connection: aoi-swnorth
+    deployment_name: gpt-35-turbo-16k
   summarize_text_content:
-    connection: Default_AzureOpenAI
-    deployment_name: gpt-35-turbo-0301
+    connection: aoi-swnorth
+    deployment_name: gpt-35-turbo-16k
